namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-court-data-adaptor-stage/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-court-data-adaptor-stage
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Legal Aid Agency"
    cloud-platform.justice.gov.uk/application: "LAA Court Data Adaptor"
    cloud-platform.justice.gov.uk/owner: "LAA Crime Apps Team: laa-crime-apps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-court-data-adaptor"
