namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-court-data-adaptor-stage/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-court-data-adaptor-stage
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-court-data-adaptor-stage
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-prometheus-scraping
 namespace: laa-court-data-adaptor-stage
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 ingress:
 - from:
   - namespaceSelector:
       matchLabels:
         component: monitoring
